# python-lite-template

./: README.txt  cookiecutter.json
hooks/: post_gen_project.sh
{{ cookiecutter.project_name }}/: .editorconfig  .envrc  .gitignore  .lvimrc  README.md  pyproject.toml  {{ cookiecutter.env_file }}  {{ cookiecutter.gitignore_name }}
{{ cookiecutter.project_name }}/.jupyter/: jupyter_lab_config.py
{{ cookiecutter.project_name }}/{{ cookiecutter.package_name }}/lib/: helper.py  json_helper.py
{{ cookiecutter.project_name }}/{{ cookiecutter.package_name }}/notebooks/: notebook_template.ipynb
{{ cookiecutter.repo_name }}/: .env  .env_  .envrc  .gitignore_  .lvimrc  pyproject.toml  {{ cookiecutter.gitignore_name }}
{{ cookiecutter.repo_name }}/.jupyter/: jupyter_lab_config.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.package_name }}/lib/: json_helper.py  path_helper.py  pickle_helper.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.package_name }}/notebooks/: notebook_template.ipynb
