[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_desc }}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
readme = "README.md"
packages = [ { include = "{{ cookiecutter.package_name }}" } ]

[tool.poetry.dependencies]
python = "{{ cookiecutter.python_version }}"

[tool.poetry.group.dev.dependencies]
mypy = ">=1.3.0"
bandit = ">=1.7.5"
pylint = ">=2.17.4"
reorder-python-imports = ">=3.9.0"
flakehell = ">=0.9.0"
jedi-language-server = ">=0.40.0"
black = { extras = ["d"], version = ">=23.3.0" }
pipdeptree = ">=2.10.2"

[tool.poetry.group.notebook.dependencies]
jupyterlab = ">=4.0.1"
jupyterlab-vim = ">=0.16.0"
jupyterlab-git = ">=0.41.0"
matplotlib = ">=3.7.1"
plotly = ">=5.14.1"
jupyterlab-code-formatter = ">=2.2.1"
seaborn = ">=0.12.2"
ipywidgets = ">=8.0.7"
jupyterlab-execute-time = ">=3.0.0"

[tool.poetry.group.test.dependencies]
pytest = ">=7.3.2"
pytest-xdist = ">=3.3.1"
hypothesis = ">=6.78.3"
pytest-asyncio = ">=0.21.0"

[tool.poetry.group.types.dependencies]

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "torchcpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry_bumpversion.file."{{ cookiecutter.package_name }}/__init__.py"]

[tool.pylint]
max-line-length = 140
disable = [
  "missing-function-docstring",
  "missing-module-docstring",
  "missing-class-docstring",
  "invalid-name",
]

[tool.black]
line-length = 140
target-version = ["py311"]

[tool.mypy]
plugins = ["numpy.typing.mypy_plugin", "pydantic.mypy"]

follow_imports = "normal"
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = false # for strict mypy: (this is the tricky one :-))

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pyright]
typeCheckingMode = "strict"
reportMissingModuleSource = "none"
reportMissingImports = "none"
reportMissingTypeStubs = "none"
reportMissingParameterType = "none"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownLambdaType = "none"
reportGeneralTypeIssues = "none"
reportUnusedExpression = "none"
reportConstantRedefinition = "none"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
