[tool.poetry]
name = "{{ cookiecutter.repo_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_desc }}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
readme = "README.md"
packages = [ { include = "{{ cookiecutter.package_name }}" } ]

[tool.poetry.dependencies]
python = ">=3.11.2,<3.12"
fsspec = ">=2023.10.0"
ujson = ">=5.8.0"
dill = ">=0.3.7"
numpy = ">=1.26.1"

[tool.poetry.group.dev.dependencies]
mypy = ">=1.6.1"
bandit = ">=1.7.5"
pylint = ">=3.0.2"
reorder-python-imports = ">=3.12.0"
flakehell = ">=0.9.0"
jedi-language-server = ">=0.41.1"
black = ">=23.11.0"
pipdeptree = ">=2.10.2"
virtualenvwrapper = ">=4.8.4"
mypy-extensions = ">=1.0.0"
pynvim = ">=0.4.3"

[tool.poetry.group.notebook.dependencies]
jupyterlab = ">=4.0.8"
jupyterlab-vim = ">=4.1.0"
matplotlib = ">=3.8.1"
plotly = ">=5.14.1"
jupyterlab-code-formatter = ">=2.2.1"
seaborn = ">=0.13.0"
ipywidgets = ">=8.1.1"
jupyterlab-execute-time = ">=3.1.0"
plotille = ">=5.0.0"
nbconvert = ">=7.11.0"
nbdime = ">=3.2.1"

[tool.poetry.group.test.dependencies]
pytest = ">=7.4.3"
pytest-xdist = ">=3.3.1"
hypothesis = ">=6.88.3"

[tool.poetry.group.type.dependencies]
types-all = ">=1.0.0"

[tool.poetry_bumpversion.file."{{ cookiecutter.package_name }}/__init__.py"]

[tool.pylint]
max-line-length = 140
disable = [
  "missing-function-docstring",
  "missing-module-docstring",
  "missing-class-docstring",
  "invalid-name",
  "too-few-public-methods",
  "import-outside-toplevel",
  "too-many-arguments",
]

[tool.black]
line-length = 140
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
plugins = ["numpy.typing.mypy_plugin"]

follow_imports = "normal"
ignore_missing_imports = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = false # for strict mypy: (this is the tricky one :-))

[tool.pyright]
typeCheckingMode = "strict"
reportMissingModuleSource = "none"
reportMissingImports = "none"
reportMissingTypeStubs = "none"
reportMissingParameterType = "none"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownLambdaType = "none"
reportGeneralTypeIssues = "none"
reportUnusedExpression = "none"
reportConstantRedefinition = "none"
reportUntypedFunctionDecorator = "none"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
